Added further styles.
Co-authored-by: fishedishe <up2246632@myport.ac.uk>

--- a/index.html
+++ b/index.html
@@ -12,6 +12,36 @@
       rel="stylesheet"
     />
 
+    <!-- Primary Meta Tags -->
+    <title>Nerdvana</title>
+    <meta name="title" content="Nerdvana" />
+    <meta
+      name="description"
+      content="        THE UNIVERSITY OF PORTSMOUTH'S AWARD WINNING TWICE-YEARLY 24 HOUR
+        CHARITY EVENT
+"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nerdvana.itsociety.co.uk/" />
+    <meta property="og:title" content="Nerdvana" />
+    <meta
+      property="og:description"
+      content="THE UNIVERSITY OF PORTSMOUTH'S AWARD WINNING TWICE-YEARLY 24 HOUR CHARITY EVENT"
+    />
+    <meta property="og:image" content="/images/favicon.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://nerdvana.itsociety.co.uk/" />
+    <meta property="twitter:title" content="Nerdvana" />
+    <meta
+      property="twitter:description"
+      content="THE UNIVERSITY OF PORTSMOUTH'S AWARD WINNING TWICE-YEARLY 24 HOUR CHARITY EVENT"
+    />
+    <meta property="twitter:image" content="/images/favicon.png" />
+
     <!-- Scripts -->
     <script src="scripts/societies.js" defer></script>
     <script src="scripts/nerdvana.js" defer></script>
